--- a/abgabe.tex
+++ b/abgabe.tex
@@ -15,7 +15,7 @@
 
 \ihead{Fach}
 \chead{Übungsblatt XX}
-\ohead{Gjelbrim Haskaj (979868)}
+\ohead{Name}
 \ofoot{Seite \pagemark}
 
 \renewcommand*{\familydefault}{\sfdefault}
